<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/senddarebutton"
    android:orientation="vertical" >

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/getdarebutton"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:onClick="back_home"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dare_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:text="@string/i_dare_you_to_"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/dare_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/enter_your_dare"
        android:inputType="textMultiLine"
        android:paddingTop="10dp"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="right" >

        <EditText
            android:id="@+id/dare_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/do_phone_picker"
            android:hint="@string/enter_cell_number_string"
            android:textColorHint="@android:color/white"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:inputType="phone" >
        </EditText>

        <Button
            android:id="@+id/do_phone_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="pick_phone"
            android:textColor="@android:color/white"
            android:text="@string/browse_string" >
        </Button>
    </RelativeLayout>
    
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:layout_marginTop="100dp"
    android:gravity="center" >
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@drawable/getdarebutton"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:onClick="send" />
    </RelativeLayout>

</LinearLayout>